@@ -21,17 +21,7 @@
  - Run the App.java
   
 ## How to Run the Program (windows)
-- Windows Version (VSCODE)
- - Download java jdk  latest.
- - Download the latest javafx SDK (18-ea+8) aarch64 from openjfx.io.
- - Extract it somewhere you can easily access.
- - Configure your Java-run time(ctrl + shift + p) and make sure you are running the correct jdk.
- - Configure the launch.json.
-   - Add this line to the configuration  "vmArgs": "--module-path \"path to the javafx lib" --add-modules javafx.controls,javafx.fxml",
-   - Be sure to put the right path.
- - In the bottom left you will see JAVA PROJECTS.
-   - Navigate and look for the Referenced Libraries then click the plus sign to add your javafx jar files. There should be total of 8 jar files.
- - Run the App.java
+- Check this Repo : [Windows](https://github.com/jgrospe92/Department_with_GUI/tree/Windows-Version).
 
 ## Project By
   -   Jeffrey
